--- a/index.html
+++ b/index.html
@@ -257,7 +257,7 @@
 								<div class="modal-content">
 									<h1>Laravelのログイン機能を用いた２段階認証の実装</h1>
 									<h2>内容</h2>
-									<p>laravelのログイン機能を用いて２段階認証を実装実装<br>ログイン時に登録されたメールアドレスにワンタイムパスワードが送信される仕様</p>
+									<p>laravelのログイン機能を用いて２段階認証を実装<br>ログイン時に登録されたメールアドレスにワンタイムパスワードが送信される仕様</p>
 									<h2>担当業務</h2>
 									<p>全て</p>
 									<h2>制作期間</h2>
