--- a/index.html
+++ b/index.html
@@ -310,7 +310,7 @@
 							<div class="form-group">
 								<label for="email">メールアドレス</label>
 								<input class="inText" id="inText1" type="text" name="entry.661310010"
-									placeholder="mkym0522@gmail.com" required>
+									placeholder="xxx@xxx.com" required>
 							</div>
 							<div class="form-group">
 								<label for="msg">お問い合わせ・ご意見・ご感想</label>
