worksの新規案件の追加

--- a/index.html
+++ b/index.html
@@ -218,6 +218,16 @@
 							</div>
 						</div>
 
+						<div class="works-item">
+							<a href="#modal-04">
+								<img class="works-image" src="img/works/work04.jpg" alt="">
+							</a>
+							<div class="works-body">
+								<div class="works-title">カウンセリングサロンHPの作成</div>
+								<div class="works-text">html, css, bootstrap, GoogleFoam, GAS, selecttype</div>
+							</div>
+						</div>
+
 					    <!-- modal-window -->
 						<div class="modal-wrapper" id="modal-01">
 							<a href="#!" class="modal-overlay"></a>
@@ -262,6 +272,24 @@
 									<p>全て</p>
 									<h2>制作期間</h2>
 									<p>3日</p>
+								</div>
+								<a href="#!" class="modal-close">×</a>
+							</div>
+						</div>
+
+						<div class="modal-wrapper" id="modal-04">
+							<a href="#!" class="modal-overlay"></a>
+							<div class="modal-window">
+								<div class="modal-content">
+									<h1>カウンセリングサロンHPの作成</h1>
+									<h2>内容</h2>
+									<p>個人カウンセラーのサンプルHP<br>お問い合わせにはGoogleFormを利用しGASでの問い合わせ自動返信メールの送信・スプレットシートにて問い合わせ内容の管理</p>
+									<h2>担当業務</h2>
+									<p>全て</p>
+									<h2>制作期間</h2>
+									<p>1週間</p>
+									<h2>git hub</h2>
+									<a href="https://mkym0522.github.io/salon-sample/" class="">https://mkym0522.github.io/salon-sample/</a>
 								</div>
 								<a href="#!" class="modal-close">×</a>
 							</div>
