--- a/private.html
+++ b/private.html
@@ -38,6 +38,16 @@
 				<p>2日</p>
 			</div>
 
+			<div>
+				<h2>カウンセリングサロンHPの作成</h2>
+				<h3>内容</h3>
+				<p>個人カウンセラーのサンプルHP<br>お問い合わせにはGoogleFormを利用しGASでの問い合わせ自動返信メールの送信・スプレットシートにて問い合わせ内容の管理</p>
+				<h3>担当業務</h3>
+				<p>全て</p>
+				<h3>制作期間</h3>
+				<p>1週間</p>
+			</div>
+
 			<input type="button" id="btn" onclick="history.back()" value="戻る">
 		</div>
 	</div>
