サイトアイコンの変更

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 		crossorigin="anonymous"></script>
 		<link href="css/reset.css" media="all" rel="stylesheet" type="text/css" />
 	<link href="css/style.css" media="all" rel="stylesheet" type="text/css" />
-	<link rel="shortcut icon" href="img/favicon.ico" />
+	<link rel="shortcut icon" href="img/Momo Makiyama.PNG" />
 	<script src="https://kit.fontawesome.com/1680317010.js" crossorigin="anonymous"></script>
 
 </head>
